# shangri-la-age-of-steam

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  ROADMAP_FEATURES.md  ROADMAP_STORY.md  advance_turn.py  agy_prompt.txt  community_roadmap.md  development_roadmap.md  docker-compose.yml  roadmap_new.md  roadmap_tech.md  roadmap_v2.md  saos.db  update_combat.py  update_engine.py  update_roadmap.py  update_ui.py
backend/: Dockerfile.backend  client.py  database.py  database_init.py  engine.py  entrypoint.sh  event_generator.py  main.py  models.py  npc_generator.py  prompt_utils.py  pyproject.toml  repository.py  requirements.txt  ruff.toml  schemas.py  simulation.py  verify_models.py  view_tables.py  websocket.py  world_event_manager.py
backend/migrations/: env.py
backend/routers/: admin.py  auth.py  economy.py  gameplay.py  workshop.py
backend/templates/: narrative_prompt.j2  npc_interaction_prompt.j2
backend/tests/: conftest.py  test_airship.py  test_api.py  test_augmentations.py  test_automata.py  test_character_creation.py  test_dynamic_ingestion.py  test_dynamic_verbosity.py  test_economy.py  test_economy_durability_sync.py  test_engine.py  test_faction_crafting.py  test_fast_travel.py  test_flavor_prompts.py  test_glossary.py  test_minigame_trigger.py  test_minigames.py  test_narrative_flow.py  test_npc_generation.py  test_persistence.py  test_repetitive_narration.py  test_save_state_continuations.py  test_vllm_client.py  test_zombie_npcs.py
backend/workshop_mods/: mod_1.json  mod_2.json  registry.json
frontend/: index.html  (+6 more)
(+43 files in other folders)
