[project]
name = "backend"
version = "0.1.0"
description = "Backend for Shangri-la Age of Steam"
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "pydantic",
    "openai",
    "jinja2",
    "sqlmodel",
    "python-multipart",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "backend/tests"
]

